Fixed gaps in sticky tables

--- a/src/utils/mixins/sticky-cell.scss
+++ b/src/utils/mixins/sticky-cell.scss
@@ -2,7 +2,6 @@
 
 @mixin sticky-cell($with-separators: true) {
   z-index: 1;
-  border: none !important;
   position: relative;
 
   &:before {
